Colaboratory を使用して作成しました

--- a/work1.ipynb
+++ b/work1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOiHHOttC63qGPMDAOjU/6f",
+      "authorship_tag": "ABX9TyN9eDKCRyFHLnoduEfNlTn2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,12 +35,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "UWTMnCsjDpOu"
+        "id": "UWTMnCsjDpOu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "69fe212a-37a3-493b-a204-daf794e5ef98"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('a')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-J6gcgFwndGo"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
