Colaboratory を使用して作成しました

--- a/work1.ipynb
+++ b/work1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM8w0IC87XeyV93Qg13SVyB",
+      "authorship_tag": "ABX9TyNUdAM2ALuNJ84wiVmp1CDu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,44 +35,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 35,
       "metadata": {
         "id": "UWTMnCsjDpOu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "64b6d1ff-0c48-46c0-ec1b-f842aa32a168"
+        "outputId": "404aceef-106f-4557-945b-65bf5ec4d722"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Requirement already satisfied: japanize-matplotlib in /usr/local/lib/python3.10/dist-packages (1.1.3)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from japanize-matplotlib) (3.7.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (1.2.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (4.46.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (1.4.5)\n",
+            "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (1.23.5)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (23.2)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (9.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (3.1.1)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->japanize-matplotlib) (2.8.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->japanize-matplotlib) (1.16.0)\n",
             "健康管理システム\n",
-            "1：初めて使う方、リセットして使う方　2：今日のデータを入力したい方　3：データを参照したい方　4：終了\n",
+            "1：初めて使う方、リセットして使う方　2：今日のデータを入力したい方　3：データを参照したい方\n",
             "どの機能を使いますか?数字を入力してください  3\n",
             "ここではデータを参照できます\n",
-            "1：ここまでのグラフが見たい　2：特定の日のデータが見たい\n",
+            "1：これまでのグラフが見たい　2：特定の日のデータが見たい\n",
             "数字を入力してください2\n",
-            "年月日を入力してください（例）2023年1月1日なら2023/01/01  2023/12/24\n",
+            "年月日を入力してください（例）2023年1月1日なら2023/01/01  2023/12/21\n",
             "         date  weight     bmi\n",
-            "5  2023/12/24    6738  1684.5\n",
+            "1  2023/12/21      45  2.8125\n",
             "ご利用ありがとうございました\n"
           ]
         }
       ],
       "source": [
+        "!pip install japanize-matplotlib\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
+        "import japanize_matplotlib\n",
         "print('健康管理システム')\n",
         "def first():\n",
         "  global height\n",
-        "  df1=pd.DataFrame(columns=['date','weight','bmi',])\n",
+        "  global mokuhyou\n",
+        "  df1=pd.DataFrame(columns=['date','weight','bmi','walking'])\n",
         "  df1.to_csv('health.csv', index=False)\n",
         "  height=int(input('あなたの身長を教えてください(m)'))\n",
+        "  mokuhyou=int(input('一日の目標歩数を教えてください'))\n",
         "  print('ありがとうございました')\n",
         "def start():\n",
-        "  print('1：初めて使う方、リセットして使う方　2：今日のデータを入力したい方　3：データを参照したい方　4：終了')\n",
+        "  print('1：初めて使う方、リセットして使う方　2：今日のデータを入力したい方　3：データを参照したい方')\n",
         "  global select\n",
         "  select=int(input('どの機能を使いますか?数字を入力してください  '))\n",
         "\n",
@@ -85,17 +101,18 @@
         "    print('次に進みます')\n",
         "  date=input('今日の年月日を入力してください（例）2023年1月1日なら2023/01/01  ')\n",
         "  weight=int(input('体重を入力してください(kg)  '))\n",
-        "  newrow={'date': date, 'weight': weight, 'bmi': weight/height**2}\n",
+        "  daywalking=int(input('歩数を入力してください '))\n",
+        "  newrow={'date': date, 'weight': weight, 'bmi': weight/height**2,'walking':daywalking}\n",
         "  df_new = pd.DataFrame(newrow, index=[0])\n",
         "  df1=pd.read_csv('health.csv')\n",
         "  df1=pd.concat([df1, df_new], ignore_index=True)\n",
-        "\n",
+        "  df1.sort_values(by='date',ascending=True,inplace=True)\n",
         "  df1.to_csv('health.csv',index=False)\n",
         "  df1\n",
         "  print('ありがとうございました')\n",
         "def data():\n",
         "  print('ここではデータを参照できます')\n",
-        "  print('1：ここまでのグラフが見たい　2：特定の日のデータが見たい')\n",
+        "  print('1：これまでのグラフが見たい　2：特定の日のデータが見たい')\n",
         "  select2=int(input('数字を入力してください'))\n",
         "  if select2==1:\n",
         "    gragh()\n",
@@ -103,15 +120,34 @@
         "    datedata()\n",
         "def gragh():\n",
         "  df1=pd.read_csv('health.csv')\n",
-        "  plt.plot(df1['date'],df1['weight'])\n",
-        "  plt.plot(df1['date'],df1['bmi'])\n",
-        "  plt.show()\n",
+        "  df1['ruikei']=df1['walking'].cumsum()\n",
+        "  ruikei2=df1['walking'].cumsum()\n",
+        "  df1.to_csv('health.csv',index=False)\n",
+        "  fig=plt.figure(figsize=(10,6))\n",
+        "  g1=fig.add_subplot(2,2,1)\n",
+        "  g2=fig.add_subplot(2,2,2)\n",
+        "  g3=fig.add_subplot(2,2,3)\n",
+        "  g4=fig.add_subplot(2,2,4)\n",
+        "  g1.plot(df1['date'],df1['weight'])\n",
+        "  g2.plot(df1['date'],df1['bmi'])\n",
+        "  g3.plot(df1['date'],df1['walking'])\n",
+        "  g4.plot(df1['date'],df1['ruikei'])\n",
+        "  g1.set_xlabel('年月')\n",
+        "  g2.set_xlabel('年月')\n",
+        "  g3.set_xlabel('年月')\n",
+        "  g4.set_xlabel('年月')\n",
+        "  g1.set_ylabel('kg')\n",
+        "  g2.set_ylabel('bmi')\n",
+        "  g3.set_ylabel('歩数')\n",
+        "  g4.set_ylabel('累計歩数')\n",
         "\n",
+        "  plt.show()\n",
         "def datedata():\n",
         "  df1=pd.read_csv('health.csv')\n",
         "  date2=input('年月日を入力してください（例）2023年1月1日なら2023/01/01  ')\n",
-        "  data3=df1[df1['date'].str.contains(date2)][['date','weight','bmi']]\n",
+        "  data3=df1[df1['date'].str.contains(date2)][['date','weight','bmi','walking','ruikei']]\n",
         "  print(data3)\n",
+        "\n",
         "start()\n",
         "\n",
         "if select==1:\n",
@@ -122,8 +158,6 @@
         "  print('ご利用ありがとうございました')\n",
         "if select==3:\n",
         "  data()\n",
-        "  print('ご利用ありがとうございました')\n",
-        "if select==4:\n",
         "  print('ご利用ありがとうございました')\n",
         "\n",
         "\n",
