Colaboratory を使用して作成しました

--- a/work2.ipynb
+++ b/work2.ipynb
@@ -4,9 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "history_visible": true,
-      "authorship_tag": "ABX9TyNUlYo70FktaWbv4ESxO3cC",
+      "authorship_tag": "ABX9TyOziV3dnylRk3eshsvS110+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,26 +93,63 @@
     {
       "cell_type": "code",
       "source": [
-        "a=int(np.random.uniform(1, 100,1 ))\n",
-        "c=np.arange(a,1000,b)\n",
-        "      5 d=np.random.choice(c,size=2)\n",
-        "----> 6 r1=c.indexOf(d[0])\n",
-        "      7 r2=c.indexOf(d[1])\n",
-        "      8 print(f'ヒントはこの等差数列には{r1}項に{d[0]},{r2}項に{d[1]}が含まれています')\n",
-        "       for i in range(3):\n",
-        "---> 12   e=input('この数列の初項は')\n",
-        "     13   f=input('この数列の公差は')\n",
-        "     14   if e==a and f==b:\n",
-        "     c=np.arange(a,1000,b)\n",
-        "----> 7 d=np.random.choice(c,size=2)\n",
-        "      8 r1=int(np.where(d[0]==c)[0])\n",
-        "      9 r2=int(np.where(d[1]==c)[0])"
+        "import numpy as np\n",
+        "print('数列当てゲーム')\n",
+        "a=int(np.random.uniform(1,100,1))\n",
+        "b=int(np.random.uniform(1,1000,1))\n",
+        "c=int(np.random.uniform(1,10,1))\n",
+        "print(a,c)\n",
+        "d=np.arange(a,b,c)\n",
+        "e=np.random.choice(d,2,replace=False)\n",
+        "f=np.where(d==e[0])\n",
+        "g=np.where(d==e[1])\n",
+        "print(f'ヒントは{f[0]}項目で{e[0]},{g[0]}項目で{e[1]}をとります')\n",
+        "for i in range(3):\n",
+        "  h=int(input('この数列の初項は何ですか'))\n",
+        "  i=int(input('この数列の公差は何ですか'))\n",
+        "  if h==a and i==c:\n",
+        "    print('正解です')\n",
+        "    break\n",
+        "  elif('違います入力しなおしてください')\n",
+        "print(f'答えは{a}+(n+1){c}でした')\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "j81v73f8a5oB"
+        "id": "j81v73f8a5oB",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 518
+        },
+        "outputId": "1989c81f-10a6-4704-d00a-f6292595b4f6"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "数列当てゲーム\n",
+            "79 3\n",
+            "ヒントは[155]項目で544,[97]項目で370をとります\n",
+            "この数列の初項は何ですか1\n",
+            "この数列の公差は何ですか1\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "Interrupted by user",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-3222fdbd021f>\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'ヒントは{f[0]}項目で{e[0]},{g[0]}項目で{e[1]}をとります'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m   \u001b[0mh\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'この数列の初項は何ですか'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m   \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'この数列の公差は何ですか'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0ma\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    849\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    850\u001b[0m             )\n\u001b[0;32m--> 851\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    852\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    853\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    893\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 895\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    896\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
+          ]
+        }
+      ]
     }
   ]
 }
